--- a/login.html
+++ b/login.html
@@ -3,32 +3,33 @@
 <head>
 	<title>JUNTA.pe</title>
 	<meta charset="utf-8">
-	<link href="https://fonts.googleapis.com/css?family=Kalam|Roboto:400,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Kalam|Roboto:400,700|Roboto" rel="stylesheet">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/utilities.css">
-  <link rel="stylesheet" type="text/css" href="css/inicio.css">
+  <link rel="stylesheet" type="text/css" href="css/login.css">
 </head>
 <body class="bg-light-blue">
 	<header>
-		<div>
-			<img src="image/logo@2x.png" class="logo-junta-pe">
+		<div class="intro-login text-center">
+			<h2 class="font-kalam">Para empezar, <br> necesitamos <span> tu celular</span></h2>
 		</div>
 	</header>
 	<section>
 		<div>
-			<div class="intro-junta text-center ">
-				<h3 class="font-roboto">Empieza una junta <br>con tus patas y...</h3>
-				<h2 class="font-kalam">¡cumple tu sueño!</h2>
-			</div>
-	  </div>
+			<form action="">
+				<input type="text" name="numero-celular" class="input-text" placeholder="escribe tu número aquí...">
+				<input type="checkbox" name="terminos-condiciones">
+				<label class="font-roboto">Acepto los <a href="#">términos y condiciones</a> </label>
+			</form>
+		</div>
 	</section>
-	<section> <!--section nube-boton -->
+	<section id="footer" class="next-image"> <!--section nube-boton -->
     <div class="nube-footer ingresar">
       <div>
-        <button type="button" class="btn-general">INGRESAR</button> 
+        <button type="button" class="btn-general">INICIAR SESIÓN</button> 
       </div>
     </div>
   </section>
