agregando vista configura tu cuenta

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 	  	<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
-		<div class="nav Rectangle-3"><!-- nav-->
+		<div class="nav Rectangle-3">
 			<i class="fa fa-arrow-left netx-left icon-color" aria-hidden="true"></i>
 			<h3 class="text-nav">Nueva Junta</h3>
 			<i class="fa fa-user user-right icon-color" aria-hidden="true"></i>
-		</div><!-- fin nav-->
-		<section id="footer" class="next-image"> <!--section nube-boton -->
+		</div>
+		<section id="footer" class="next-image">
 		<div class="nube-footer">
 			<div>
 				<button type="button" class="btn btn-primary btn-lg btn-block">AGRÉGALO A TU JUNTA </button> 
 			</div>
 		</div>
-	</section><!--fin section nube -->
+	</section>
 	<script type="text/javascript" src="js/jquery.js" ></script>	
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
     </body>
