--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Kalam|Roboto:400,700" rel="stylesheet">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"
+  <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/utilities.css">
   <link rel="stylesheet" type="text/css" href="css/inicio.css">
@@ -17,7 +17,7 @@
 			<img src="image/logo@2x.png" class="logo-junta-pe">
 		</div>
 	</header>
-	<section>
+	 <section>
 		<div>
 			<div class="intro-junta text-center ">
 				<h3 class="font-roboto">Empieza una junta <br>con tus patas y...</h3>
@@ -25,13 +25,13 @@
 			</div>
 	  </div>
 	</section>
-	<section> <!--section nube-boton -->
+	<section> <!--section nube-boton-->
     <div class="nube-footer ingresar">
       <div>
         <button type="button" class="btn-general">INGRESAR</button> 
       </div>
     </div>
-  </section>
+  </section>  
 
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
