ultimos cambios page_1 inicio

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<section> <!--section nube-boton-->
     <div class="nube-footer ingresar">
       <div>
-        <button type="button" class="btn-general">INGRESAR</button> 
+        <button type="button" class="btn-general font-roboto">INGRESAR</button> 
       </div>
     </div>
   </section>  
