--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
 	<section id="footer" class="next-image"> <!--section nube-boton-->
     <div class="nube-footer iniciar-sesion">
       <div>
-        <button type="button" class="btn-general">INICIAR SESIÓN</button> 
+        <button type="button" class="btn-general font-roboto">INICIAR SESIÓN</button> 
       </div>
     </div>
   </section>  
