--- a/login.html
+++ b/login.html
@@ -23,13 +23,13 @@
 			<form action="">
 				<input type="text" name="numero-celular" class="input-text" placeholder="escribe tu número aquí...">
 				<div class="control">
-					<input type="checkbox" name="terminos-condiciones" class="w3-check">
+					<input type="checkbox" name="terminos-condiciones" class="w3-check font-roboto">
 					<label class="font-roboto">Acepto los <a href="#">términos y condiciones</a> </label>				
 				</div>
 			</form>
 		</div>
 	</section>
-	<section id="footer" class="next-image"> <!--section nube-boton-->
+	<section id="footer" class="next-image">
     <div class="nube-footer iniciar-sesion">
       <div>
         <button type="button" class="btn-general font-roboto">INICIAR SESIÓN</button> 
