--- a/nueva-junt-1.html
+++ b/nueva-junt-1.html
@@ -44,10 +44,10 @@
 		</section>
 		<div>
 			<select class="cuando-btn center-block">
-			  <option value="volvo">el 31 de diciembre</option>
-			  <option value="saab">el 31 de enero</option>
-			  <option value="opel">el 31 de febrero</option>
-			  <option value="audi">el 31 de marzo</option>
+			  <option value="dic">el 31 de diciembre</option>
+			  <option value="ene">el 31 de enero</option>
+			  <option value="feb">el 31 de febrero</option>
+			  <option value="mar">el 31 de marzo</option>
 			</select>
 		</div>
 		<section id="footer" class="next-image"> <!--section nube-boton -->
