--- a/nueva-junta-confirmacion.html
+++ b/nueva-junta-confirmacion.html
@@ -9,21 +9,34 @@
 	  	<link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet">
 	  	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 	  	<link rel="stylesheet" type="text/css" href="css/utilities.css">
-	  	<link rel="stylesheet" type="text/css" href="css/main.css">
+	  	<link rel="stylesheet" type="text/css" href="css/stylePart.css">
 	</head>
 	<body>
 		<div class="nav Rectangle-3"><!-- nav-->
-			<i class="fa fa-arrow-left netx-left icon-color" aria-hidden="true"></i>
+			<a href="#"><i class="fa fa-arrow-left netx-left icon-color" aria-hidden="true"></i></a>
 			<h3 class="text-nav">Nueva Junta</h3>
 			<i class="fa fa-user user-right icon-color" aria-hidden="true"></i>
 		</div><!-- fin nav-->
-		<section id="footer" class="next-image"> <!--section nube-boton -->
-		<div class="nube-footer">
-			<div>
-				<button type="button" class="btn btn-primary btn-lg btn-block">AGRÉGALO A TU JUNTA </button> 
+		<section class="nueva-junta">
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-offset-1 col-xs-10">
+						<div class="text-junta-confirmacion">
+							<p><span class="text-listo">¡Listo!</span></p>
+							<p class="text-light">sorteamos las fechas, y... </p>
+							<p class="text-final">¡El <span>30 de enero </span> te llevas los <span>S/1,500</span></p>
+						</div>
+					</div>
+				</div>
 			</div>
-		</div>
-	</section><!--fin section nube -->
+		</section>
+		<div class="nube-footer newtop newtopconfirmation"><!--section nube-boton -->
+			<div>
+				<span class="text-span-junta3 position-text">¿Qué sueño quieres cumplir?</span>
+				<a href="#" type="button" class="btn btn-primary btn-lg btn-block btn-next">AGRÉGALO A TU JUNTA</a> 
+				
+			</div>
+		</div><!--fin section nube -->
 	<script type="text/javascript" src="js/jquery.js" ></script>	
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
     </body>
