--- a/nueva-junta-paso3.html
+++ b/nueva-junta-paso3.html
@@ -26,33 +26,27 @@
 								<li><div class="num-progress">1</div></li>
 								<li><div class="linea "></div></li>
 								<li><div  class="num-progress">2</div></li>
-								<li><div class="linea linea2"></div></li>
-								<li><div class="num-progress color-progress">3</div></li>
+								<li><div class="linea "></div></li>
+								<li><div class="num-progress">3</div></li>
 							</ul>
 						</div>
-						<div class="text-junta2">
-							<p>¿ Cuánto <span>aportarán </span>mensualme?</p>
+						<div class="text-junta3">
+							<p>¿ Quiénes <span>participarán </span> de la junta?</p>
 						</div>
-						<div class="input-group">
-						    <div class="input-group-btn">
-						        <button type="button" class="btn btn-default dropdown-toggle margin-btn border-radius" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">S/ <span class="caret"></span></button>
-						        <ul class="dropdown-menu">
-						          <li><a href="#">S/</a></li>
-						          <li><a href="#">$</a></li>
-						          <li><a href="#">Euros</a></li>
-						        </ul>
-						    </div><!-- /btn-group -->
-						    <input type="text" class="form-control height-input border-radius" placeholder="250">
+						<div class="num-personal-junta">
+							<span class="text-junta-left">Yo</span>
+							<input type="text" placeholder="123-456-789" class="text-junta-right"></input>
 						</div><!-- /input-group -->
-						<span class="text-span">por persona</span>
+						<button type="button" class="btn btn-default btn-lg  btn-size agregar-friend"><i class="fa fa-plus-circle" aria-hidden="true"></i>Agregar a un pata...</button>
 					</div>
 				</div>
 			</div>
 		</section>
-		<div class="nube-footer newtop"><!--section nube-boton -->
+		<div class="nube-footer newtop newtop3"><!--section nube-boton -->
 			<div>
 				<i class="fa fa-chevron-left icon-left-next" aria-hidden="true"></i>
-				<a  href="nueva-junta-paso3.html" type="button" class="btn btn-primary btn-lg btn-block btn-next">SIGUIENTE </a> 
+				<a href="nueva-junta-confirmacion.html" type="button" class="btn btn-primary btn-lg btn-block btn-next">¡CREAR JUNTA!</a> 
+				<span class="text-span-junta3">Tus patas recibirán un SMS</span>
 			</div>
 		</div><!--fin section nube -->
 	<script type="text/javascript" src="js/jquery.js" ></script>	
