--- a/home.html
+++ b/home.html
@@ -15,7 +15,9 @@
 	<body>
 		<div class="nav Rectangle-3"><!-- nav-->
 			<p class="hola-title">¡Hola!</p>
-			<i class="fa fa-user user-right icon-color icon-pd" aria-hidden="true"></i>
+			<a href="#">
+				<i class="fa fa-user user-right icon-color icon-pd" aria-hidden="true"></i>
+			</a>
 		</div><!-- fin nav-->
 		<p class="font-kalam registrate text-center">Aún no tienes juntas registradas...</p>
 		<div>
