--- a/login-sms.html
+++ b/login-sms.html
@@ -23,7 +23,11 @@
 		<section id="footer" class="next-image"> <!--section nube-boton -->
 			<div class="nube-footer nube-top">
 				<div>
-					<button type="button" class="btn btn-primary btn-lg btn-block">CONFIRMAR</button> 
+					<button type="button" class="btn btn-primary btn-lg btn-block">
+						<a href="home.html">
+							CONFIRMAR
+						</a>
+					</button> 
 				</div>
 			</div>
 		</section><!--fin section nube -->
