--- a/login.html
+++ b/login.html
@@ -1,43 +1,44 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>JUNTA.pe</title>
-	<meta charset="utf-8">
-	<link href="https://fonts.googleapis.com/css?family=Kalam|Roboto:400,700|Roboto" rel="stylesheet">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="http://www.w3schools.com/lib/w3.css">
-  <link rel="stylesheet" type="text/css" href="css/utilities.css">
-  <link rel="stylesheet" type="text/css" href="css/login.css">
-</head>
-<body class="bg-light-blue">
-	<header>
-		<div class="intro-login">
-			<h2 class="font-kalam">Para empezar, <br> necesitamos <span> tu celular</span></h2>
-		</div>
-	</header>
-	 <section>
-		<div>
-			<form action="">
-				<input type="text" name="numero-celular" class="input-text" placeholder="escribe tu número aquí...">
-				<div class="control">
-					<input type="checkbox" name="terminos-condiciones" class="w3-check font-roboto">
-					<label class="font-roboto">Acepto los <a href="#">términos y condiciones</a> </label>				
+	<head>
+		<title>JUNTA.pe</title>
+		<meta charset="utf-8">
+		<link href="https://fonts.googleapis.com/css?family=Kalam|Roboto:400,700|Roboto" rel="stylesheet">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="http://www.w3schools.com/lib/w3.css">
+		<link rel="stylesheet" type="text/css" href="css/utilities.css">
+		<link rel="stylesheet" type="text/css" href="css/login.css">
+	</head>
+	<body class="bg-light-blue">
+		<header>
+			<div class="intro-login">
+				<h2 class="font-kalam">Para empezar, <br> necesitamos <span> tu celular</span></h2>
+			</div>
+		</header>
+		<section>
+			<div>
+				<form action="">
+					<input type="text" name="numero-celular" class="input-text" placeholder="escribe tu número aquí...">
+					<div class="control">
+						<input type="checkbox" name="terminos-condiciones" class="w3-check font-roboto">
+						<label class="font-roboto">Acepto los <a href="#">términos y condiciones</a> </label>				
+					</div>
+				</form>
+			</div>
+		</section>
+		<section id="footer" class="next-image">
+			<div class="nube-footer iniciar-sesion">
+				<div>
+					<button type="button" class="btn-general font-roboto">
+						<a href="login-sms.html">INICIAR SESIÓN</a>
+				</button> 
 				</div>
-			</form>
-		</div>
-	</section>
-	<section id="footer" class="next-image">
-    <div class="nube-footer iniciar-sesion">
-      <div>
-        <button type="button" class="btn-general font-roboto">INICIAR SESIÓN</button> 
-      </div>
-    </div>
-  </section>  
-
-	<script type="text/javascript" src="js/jquery.js"></script>
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
-</body>
+			</div>
+		</section>  
+		<script type="text/javascript" src="js/jquery.js"></script>
+		<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	</body>
 </html>
