--- a/mis-juntas.html
+++ b/mis-juntas.html
@@ -15,7 +15,9 @@
 	<body>
 		<div class="nav navbarMisJuntas">
 			<h3 class="text-nav">Mis juntas</h3>
-			<i class="fa fa-user user-right icon-color" aria-hidden="true"></i>
+			<a href="#">
+				<i class="fa fa-user user-right icon-color" aria-hidden="true"></i>
+			</a>
 		</div>
 		<section class="nubesMixtas">
 			<img src="image/mascara-nube-grande.png" class="nubeMascara">
