--- a/nueva-junta-confirmacion.html
+++ b/nueva-junta-confirmacion.html
@@ -13,9 +13,13 @@
 	</head>
 	<body>
 		<div class="nav Rectangle-3"><!-- nav-->
-			<a href="#"><i class="fa fa-arrow-left netx-left icon-color" aria-hidden="true"></i></a>
+			<a href="#">
+				<i class="fa fa-arrow-left netx-left icon-color" aria-hidden="true"></i>
+			</a>
 			<h3 class="text-nav">Nueva Junta</h3>
-			<i class="fa fa-user user-right icon-color" aria-hidden="true"></i>
+			<a href="#">
+				<i class="fa fa-user user-right icon-color" aria-hidden="true"></i>
+			</a>
 		</div><!-- fin nav-->
 		<section class="nueva-junta">
 			<div class="container">
@@ -34,7 +38,6 @@
 			<div>
 				<span class="text-span-junta3 position-text">¿Qué sueño quieres cumplir?</span>
 				<a href="#" type="button" class="btn btn-primary btn-lg btn-block btn-next">AGRÉGALO A TU JUNTA</a> 
-				
 			</div>
 		</div><!--fin section nube -->
 	<script type="text/javascript" src="js/jquery.js" ></script>	
