--- a/viaje-a-cancun.html
+++ b/viaje-a-cancun.html
@@ -13,14 +13,18 @@
 	</head>
 	<body>
 		<div class="nav navbarViaje">
-			<i class="fa fa-arrow-left netx-left icon-color" aria-hidden="true"></i>
+			<a href="#">
+				<i class="fa fa-arrow-left netx-left icon-color" aria-hidden="true"></i>
+			</a>
 			<h3 class="text-nav">Viaje a Cancún</h3>
-			<i class="fa fa-cog user-right icon-color" aria-hidden="true"></i>
+			<a href="#">
+				<i class="fa fa-cog user-right icon-color" aria-hidden="true"></i>
+			</a>
 		</div>
 		<section class="textoUsuario">
 			<p>¡Estás a <span class="textoColor">2 meses</span> de recibir los <span class="textoColor">S/1,500</span> para cumplir tu sueño!</p>
 		</section>
-		<footer class="nubeFooter">
+		<footer class="nube-Footer">
 			<img src="image/mascara-nube-grande.png">
 		</footer>	
 	<script type="text/javascript" src="js/jquery.js"></script>
