--- a/configura-tu-junta.html
+++ b/configura-tu-junta.html
@@ -14,9 +14,13 @@
 	</head>
 	<body>
 		<div class="nav Rectangle-3">
-			<i class="fa fa-arrow-left netx-left icon-color" aria-hidden="true"></i>
+			<a href="#">
+				<i class="fa fa-arrow-left netx-left icon-color" aria-hidden="true"></i>
+			</a>
 			<h3 class="text-nav">Configura tu junta</h3>
-			<i class="fa fa-user user-right icon-color" aria-hidden="true"></i>
+			<a href="#">
+				<i class="fa fa-user user-right icon-color" aria-hidden="true"></i>
+			</a>
 		</div>
 		<section class="datosUsuario">
 			<div class="row margen">
@@ -34,16 +38,16 @@
 				<div class="col-xs-offset-1"></div>
 				<div class="col-xs-3">
 					<select class="form-control altoSelect">
-					  <option>1</option>
-					  <option>2</option>
-					  <option>3</option>
-					  <option>4</option>
-					  <option>5</option>
+					    <option>1</option>
+					    <option>2</option>
+					    <option>3</option>
+					    <option>4</option>
+					    <option>5</option>
 					</select>
 				</div>
 				<div class="col-xs-offset-1"></div>
 				<div class="col-xs-7">
-			      <input type="password" class="form-control correccionTamano" id="inputPassword3" placeholder="Tu # de cuenta">
+			      	<input type="password" class="form-control correccionTamano" id="inputPassword3" placeholder="Tu # de cuenta">
 			    </div>
 			    <div class="col-xs-offset-1"></div>
 			</div>
