--- a/nueva-junt-1.html
+++ b/nueva-junt-1.html
@@ -17,7 +17,7 @@
 			<a href="#">
 				<i class="fa fa-arrow-left netx-left icon-color" aria-hidden="true"></i>
 			</a>
-			<h3 class="text-nav">Nueva Junta</h3>
+			<h3 class="text-nav nueva-nav">Nueva Junta</h3>
 			<a href="#">
 				<i class="fa fa-user user-right icon-color" aria-hidden="true"></i>
 			</a>
