--- a/nueva-junta-paso2.html
+++ b/nueva-junta-paso2.html
@@ -13,9 +13,13 @@
 	</head>
 	<body>
 		<div class="nav Rectangle-3"><!-- nav-->
-			<a href="#"><i class="fa fa-arrow-left netx-left icon-color" aria-hidden="true"></i></a>
+			<a href="#">
+				<i class="fa fa-arrow-left netx-left icon-color" aria-hidden="true"></
+			</a>
 			<h3 class="text-nav">Nueva Junta</h3>
-			<i class="fa fa-user user-right icon-color" aria-hidden="true"></i>
+			<a href="#">
+				<i class="fa fa-user user-right icon-color" aria-hidden="true"></i>
+			</a>
 		</div><!-- fin nav-->
 		<section class="nueva-junta">
 			<div class="container">
@@ -23,11 +27,21 @@
 					<div class="col-xs-offset-1 col-xs-10">
 						<div class="list-progress">
 							<ul>	
-								<li><div class="num-progress">1</div></li>
-								<li><div class="linea "></div></li>
-								<li><div  class="num-progress">2</div></li>
-								<li><div class="linea linea2"></div></li>
-								<li><div class="num-progress color-progress">3</div></li>
+								<li>
+									<div class="num-progress">1</div>
+								</li>
+								<li>
+									<div class="linea "></div>
+								</li>
+								<li>
+									<div  class="num-progress">2</div>
+								</li>
+								<li>
+									<div class="linea linea2"></div>
+								</li>
+								<li>
+									<div class="num-progress color-progress">3</div>
+							    </li>
 							</ul>
 						</div>
 						<div class="text-junta2">
@@ -37,9 +51,15 @@
 						    <div class="input-group-btn">
 						        <button type="button" class="btn btn-default dropdown-toggle margin-btn border-radius" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">S/ <span class="caret"></span></button>
 						        <ul class="dropdown-menu">
-						          <li><a href="#">S/</a></li>
-						          <li><a href="#">$</a></li>
-						          <li><a href="#">Euros</a></li>
+						          	<li>
+						          		<a href="#">S/</a>
+						          	</li>
+						          	<li>
+						          		<a href="#">$</a>
+						          	</li>
+						          	<li>
+						          		<a href="#">Euros</a>
+						          	</li>
 						        </ul>
 						    </div><!-- /btn-group -->
 						    <input type="text" class="form-control height-input border-radius" placeholder="250">
