--- a/nueva-junta-paso3.html
+++ b/nueva-junta-paso3.html
@@ -13,9 +13,13 @@
 	</head>
 	<body>
 		<div class="nav Rectangle-3"><!-- nav-->
-			<a href="#"><i class="fa fa-arrow-left netx-left icon-color" aria-hidden="true"></i></a>
+			<a href="#">
+				<i class="fa fa-arrow-left netx-left icon-color" aria-hidden="true"></i>
+			</a>
 			<h3 class="text-nav">Nueva Junta</h3>
-			<i class="fa fa-user user-right icon-color" aria-hidden="true"></i>
+			<a href="#">
+				<i class="fa fa-user user-right icon-color" aria-hidden="true"></i>
+			</a>
 		</div><!-- fin nav-->
 		<section class="nueva-junta">
 			<div class="container">
