--- a/index.html
+++ b/index.html
@@ -14,25 +14,25 @@
 	<body class="bg-light-blue">
  		<header>
 			<div>
-				<img src="image/logo@2x.png" class="logo-junta-pe">
+				<img src="image/logo@2x.png" class="logo-junta-pe img-responsive">
 			</div>
 		</header>
-			<section>
-				<div>
-					<div class="intro-junta text-center ">
-						<h3 class="font-roboto">Empieza una junta <br>con tus patas y...</h3>
-						<h2 class="font-kalam">¡cumple tu sueño!</h2>
-					</div>
-			    </div>
-			</section>
-	 	<section>
-		    <div class="nube-footer ingresar">
-			    <div>
-			        <button type="button" class="btn-general font-roboto">
-			        	<a href="login.html">INGRESAR</a>
-			        </button> 
-			    </div>
+		<section>
+			<div>
+				<div class="intro-junta text-center">
+					<h3 class="font-roboto">Empieza una junta <br>con tus patas y...</h3>
+					<h2 class="font-kalam">¡cumple tu sueño!</h2>
+				</div>
 		    </div>
+		</section>
+	 	<section>
+	    <div class="nube-footer ingresar">
+		    <div>
+		        <button type="button" class="btn-general font-roboto btn btn-primary">
+		        	<a href="login.html">INGRESAR</a>
+		        </button> 
+		    </div>
+	    </div>
 		</section>   
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
