cambios de css en todas las vistas

--- a/home.html
+++ b/home.html
@@ -10,7 +10,6 @@
 	  	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 	  	<link rel="stylesheet" type="text/css" href="css/utilities.css">
 	  	<link rel="stylesheet" type="text/css" href="css/main.css">
-	  	<link rel="stylesheet" type="text/css" href="css/home.css">
 	</head>
 	<body>
 		<div class="nav Rectangle-3"><!-- nav-->
@@ -22,7 +21,7 @@
 		<p class="font-kalam registrate text-center">Aún no tienes juntas registradas...</p>
 		<div>
 			<button class="center-block btn-plus" type="submit">
-				<img class="home-nube" src="image/nueva-junta@2x.png">
+				<a href="nueva-junt-1.html"><img class="home-nube" src="image/nueva-junta@2x.png"></a>
 			</button>
 		</div>	
 		<p class="font-kalam text-center iniciar-home">Iniciar junta</p>
