--- a/login-sms.html
+++ b/login-sms.html
@@ -9,14 +9,14 @@
 	  	<link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet">
 	  	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 	  	<link rel="stylesheet" type="text/css" href="css/utilities.css">
-	  	<link rel="stylesheet" type="text/css" href="css/login-sms.css">
+	  	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body class="bg-light-blue">
 <!--login-sms-->
 		<div class="container">
 			<p class="font-kalam login white">Te hemos enviado un mensaje para <b class="yellow-login"> confirmar tu número</p>
-			<input type="number" class="input-text text-left center-block" id="login-code" placeholder="escribe el código aquí...">
-			<a href="#" class="code-remsj">
+			<input type="text" class="input-text margin-sms" placeholder="escribe el código aquí...">
+			<a href="#" class="code-remsj margin-sms">
 				<ins>¿No te llegó el mensaje?</ins>
 			</a>
 		</div>
@@ -24,7 +24,7 @@
 			<div class="nube-footer nube-top">
 				<div>
 					<button type="button" class="btn btn-primary btn-lg btn-block">
-						<a href="home.html">
+						<a href="home.html " class="white">
 							CONFIRMAR
 						</a>
 					</button> 
