--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="http://www.w3schools.com/lib/w3.css">
 		<link rel="stylesheet" type="text/css" href="css/utilities.css">
-		<link rel="stylesheet" type="text/css" href="css/login.css">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body class="bg-light-blue">
 		<header>
@@ -18,26 +18,20 @@
 				<h2 class="font-kalam">Para empezar, <br> necesitamos <span> tu celular</span></h2>
 			</div>
 		</header>
-		<section>
-			<div>
-				<form action="">
-					<input type="text" name="numero-celular" class="input-text" placeholder="escribe tu número aquí...">
-					<div class="control">
-						<input type="checkbox" name="terminos-condiciones" class="w3-check font-roboto">
-						<label class="font-roboto">Acepto los <a href="#">términos y condiciones</a> </label>				
-					</div>
-				</form>
-			</div>
-		</section>
-		<section id="footer" class="next-image">
+		<div>
+			<form action="">
+				<input type="text" name="numero-celular" class="input-text" placeholder="escribe tu número aquí...">
+				<div class="control">
+					<input type="checkbox" name="terminos-condiciones" class="w3-check font-roboto">
+					<label class="font-roboto">Acepto los <a href="#">términos y condiciones</a> </label>				
+				</div>
+			</form>
+		</div>
 			<div class="nube-footer iniciar-sesion">
-				<div>
 					<button type="button" class="btn-general font-roboto">
 						<a href="login-sms.html">INICIAR SESIÓN</a>
 				</button> 
-				</div>
-			</div>
-		</section>  
+			</div> 
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	</body>
