--- a/configura-tu-junta.html
+++ b/configura-tu-junta.html
@@ -10,12 +10,11 @@
 	  	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 	  	<link rel="stylesheet" type="text/css" href="css/utilities.css">
 	  	<link rel="stylesheet" type="text/css" href="css/main.css">
-	  	<link rel="stylesheet" type="text/css" href="css/configura-tu-junta.css">
 	</head>
 	<body>
 		<div class="nav Rectangle-3">
 			<a href="#">
-				<i class="fa fa-arrow-left netx-left icon-color" aria-hidden="true"></i>
+				<i class="fa fa-arrow-left next-left icon-color" aria-hidden="true"></i>
 			</a>
 			<h3 class="text-nav">Configura tu junta</h3>
 			<a href="#">
@@ -55,7 +54,7 @@
 		<section id="footer" class="next-image">
 			<div class="nube-footer">
 				<div>
-					<button type="button" class="btn btn-primary btn-lg btn-block">GUARDAR</button> 
+					<a href="viaje-a-cancun.html" type="button" class="btn btn-primary btn-lg btn-block">GUARDAR</a> 
 				</div>
 			</div>
 		</section>
