--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	  	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 	  	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	  	<link rel="stylesheet" type="text/css" href="css/utilities.css">
-	  	<link rel="stylesheet" type="text/css" href="css/inicio.css">
+	  	<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body class="bg-light-blue">
  		<header>
