--- a/nueva-junt-1.html
+++ b/nueva-junt-1.html
@@ -10,12 +10,11 @@
 	  	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 	  	<link rel="stylesheet" type="text/css" href="css/utilities.css">
 	  	<link rel="stylesheet" type="text/css" href="css/main.css">
-	  	<link rel="stylesheet" type="text/css" href="css/nueva-junta-1.css">
 	</head>
 	<body>
 		<div class="nav Rectangle-3 fixed-top"><!-- nav-->
 			<a href="#">
-				<i class="fa fa-arrow-left netx-left icon-color" aria-hidden="true"></i>
+				<i class="fa fa-arrow-left next-left icon-color" aria-hidden="true"></i>
 			</a>
 			<h3 class="text-nav nueva-nav">Nueva Junta</h3>
 			<a href="#">
@@ -53,7 +52,7 @@
 		<section id="footer" class="next-image"> <!--section nube-boton -->
 		<div class="nube-footer nueva1-btn">
 			<div>
-				<button type="button" class="btn btn-primary btn-lg btn-block">SIGUIENTE</button> 
+				<a href="nueva-junta-paso2.html" type="button" class="btn btn-primary btn-lg btn-block">SIGUIENTE</a> 
 			</div>
 		</div>
 	</section><!--fin section nube -->
