--- a/nueva-junta-confirmacion.html
+++ b/nueva-junta-confirmacion.html
@@ -9,12 +9,12 @@
 	  	<link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet">
 	  	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 	  	<link rel="stylesheet" type="text/css" href="css/utilities.css">
-	  	<link rel="stylesheet" type="text/css" href="css/stylePart.css">
+	  	<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
 		<div class="nav Rectangle-3"><!-- nav-->
 			<a href="#">
-				<i class="fa fa-arrow-left netx-left icon-color" aria-hidden="true"></i>
+				<i class="fa fa-arrow-left next-left icon-color" aria-hidden="true"></i>
 			</a>
 			<h3 class="text-nav">Nueva Junta</h3>
 			<a href="#">
@@ -37,7 +37,7 @@
 		<div class="nube-footer newtop newtopconfirmation"><!--section nube-boton -->
 			<div>
 				<span class="text-span-junta3 position-text">¿Qué sueño quieres cumplir?</span>
-				<a href="#" type="button" class="btn btn-primary btn-lg btn-block btn-next">AGRÉGALO A TU JUNTA</a> 
+				<a href="configura-tu-junta.html" type="button" class="btn btn-primary btn-lg btn-block btn-next">AGRÉGALO A TU JUNTA</a> 
 			</div>
 		</div><!--fin section nube -->
 	<script type="text/javascript" src="js/jquery.js" ></script>	
