--- a/nueva-junta-paso2.html
+++ b/nueva-junta-paso2.html
@@ -9,17 +9,13 @@
 	  	<link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet">
 	  	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 	  	<link rel="stylesheet" type="text/css" href="css/utilities.css">
-	  	<link rel="stylesheet" type="text/css" href="css/stylePart.css">
+	  	<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
 		<div class="nav Rectangle-3"><!-- nav-->
-			<a href="#">
-				<i class="fa fa-arrow-left netx-left icon-color" aria-hidden="true"></
-			</a>
+			<a href="#"><i class="fa fa-arrow-left next-left icon-color" aria-hidden="true"></i></a>
 			<h3 class="text-nav">Nueva Junta</h3>
-			<a href="#">
-				<i class="fa fa-user user-right icon-color" aria-hidden="true"></i>
-			</a>
+			<i class="fa fa-user user-right icon-color" aria-hidden="true"></i>
 		</div><!-- fin nav-->
 		<section class="nueva-junta">
 			<div class="container">
@@ -27,39 +23,23 @@
 					<div class="col-xs-offset-1 col-xs-10">
 						<div class="list-progress">
 							<ul>	
-								<li>
-									<div class="num-progress">1</div>
-								</li>
-								<li>
-									<div class="linea "></div>
-								</li>
-								<li>
-									<div  class="num-progress">2</div>
-								</li>
-								<li>
-									<div class="linea linea2"></div>
-								</li>
-								<li>
-									<div class="num-progress color-progress">3</div>
-							    </li>
+								<li><div class="num-progress">1</div></li>
+								<li><div class="linea "></div></li>
+								<li><div  class="num-progress">2</div></li>
+								<li><div class="linea linea2"></div></li>
+								<li><div class="num-progress color-progress">3</div></li>
 							</ul>
 						</div>
 						<div class="text-junta2">
-							<p>¿ Cuánto <span>aportarán </span>mensualme?</p>
+							<p>¿Cuánto <span>aportarán </span>mensualme?</p>
 						</div>
 						<div class="input-group">
 						    <div class="input-group-btn">
 						        <button type="button" class="btn btn-default dropdown-toggle margin-btn border-radius" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">S/ <span class="caret"></span></button>
 						        <ul class="dropdown-menu">
-						          	<li>
-						          		<a href="#">S/</a>
-						          	</li>
-						          	<li>
-						          		<a href="#">$</a>
-						          	</li>
-						          	<li>
-						          		<a href="#">Euros</a>
-						          	</li>
+						          <li><a href="#">S/</a></li>
+						          <li><a href="#">$</a></li>
+						          <li><a href="#">Euros</a></li>
 						        </ul>
 						    </div><!-- /btn-group -->
 						    <input type="text" class="form-control height-input border-radius" placeholder="250">
