--- a/nueva-junta-paso3.html
+++ b/nueva-junta-paso3.html
@@ -9,12 +9,12 @@
 	  	<link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet">
 	  	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 	  	<link rel="stylesheet" type="text/css" href="css/utilities.css">
-	  	<link rel="stylesheet" type="text/css" href="css/stylePart.css">
+	  	<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
 		<div class="nav Rectangle-3"><!-- nav-->
 			<a href="#">
-				<i class="fa fa-arrow-left netx-left icon-color" aria-hidden="true"></i>
+				<i class="fa fa-arrow-left next-left icon-color" aria-hidden="true"></i>
 			</a>
 			<h3 class="text-nav">Nueva Junta</h3>
 			<a href="#">
@@ -35,7 +35,7 @@
 							</ul>
 						</div>
 						<div class="text-junta3">
-							<p>¿ Quiénes <span>participarán </span> de la junta?</p>
+							<p>¿Quiénes <span>participarán </span> de la junta?</p>
 						</div>
 						<div class="num-personal-junta">
 							<span class="text-junta-left">Yo</span>
