--- a/viaje-a-cancun.html
+++ b/viaje-a-cancun.html
@@ -9,12 +9,12 @@
 	  	<link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet">
 	  	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 	  	<link rel="stylesheet" type="text/css" href="css/utilities.css">
-	  	<link rel="stylesheet" type="text/css" href="css/viaje-a-cancun.css">
+	  	<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
 		<div class="nav navbarViaje">
 			<a href="#">
-				<i class="fa fa-arrow-left netx-left icon-color" aria-hidden="true"></i>
+				<i class="fa fa-arrow-left icon-color" aria-hidden="true"></i>
 			</a>
 			<h3 class="text-nav">Viaje a Cancún</h3>
 			<a href="#">
