--- a/login-sms.html
+++ b/login-sms.html
@@ -32,7 +32,7 @@
 			</div>
 		</section><!--fin section nube -->
 <!--fin login-sms-->
-		<script type="text/javascript" src="js/jquery-3.1.1.js"></script>
-		<script type="text/javascript" src="js/bootstrap.js"></script>
-</body>
+		<script type="text/javascript" src="js/jquery.js"></script>
+		<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	</body>
 </html>
