--- a/nueva-junta-paso2.html
+++ b/nueva-junta-paso2.html
@@ -42,7 +42,7 @@
 						          <li><a href="#">Euros</a></li>
 						        </ul>
 						    </div><!-- /btn-group -->
-						    <input type="text" class="form-control height-input border-radius" placeholder="250">
+						    <input id="aporte" type="number" class="form-control height-input border-radius" placeholder="250">
 						</div><!-- /input-group -->
 						<span class="text-span">por persona</span>
 					</div>
@@ -52,10 +52,11 @@
 		<div class="nube-footer newtop"><!--section nube-boton -->
 			<div>
 				<i class="fa fa-chevron-left icon-left-next" aria-hidden="true"></i>
-				<a  href="nueva-junta-paso3.html" type="button" class="btn btn-primary btn-lg btn-block btn-next">SIGUIENTE </a> 
+				<a id="next" type="button" class="btn btn-primary btn-lg btn-block btn-next">SIGUIENTE </a> 
 			</div>
 		</div><!--fin section nube -->
-	<script type="text/javascript" src="js/jquery.js" ></script>	
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
-    </body>
+		<script type="text/javascript" src="js/jquery.js" ></script>	
+		<script type="text/javascript" src="js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="js/app.js"></script>
+	</body>
 </html>
