--- a/nueva-junta-paso3.html
+++ b/nueva-junta-paso3.html
@@ -39,7 +39,7 @@
 						</div>
 						<div class="num-personal-junta">
 							<span class="text-junta-left">Yo</span>
-							<input type="text" placeholder="123-456-789" class="text-junta-right"></input>
+							<input type="number" placeholder="123-456-789" class="text-junta-right"></input>
 						</div><!-- /input-group -->
 						<button type="button" class="btn btn-default btn-lg  btn-size agregar-friend"><i class="fa fa-plus-circle" aria-hidden="true"></i>Agregar a un pata...</button>
 					</div>
@@ -55,5 +55,6 @@
 		</div><!--fin section nube -->
 	<script type="text/javascript" src="js/jquery.js" ></script>	
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/app.js"></script>
     </body>
 </html>
